[package]
authors = ["Junfeng Liu <china.liujunfeng@gmail.com>"]
categories = ["web-programming::http-server", "database"]
description = "General CRUD RESTful APIs for MongoDB."
edition = "2018"
keywords = ["MongoDB", "CRUD"]
license = "MIT"
name = "mongo_service"
readme = "README.md"
repository = "https://github.com/J-F-Liu/mongo_service.git"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.6.0", features = ["attributes"]}
chrono = "0.4.11"
futures = "0.3.4"
mongodb = {version = "1.1.1", default-features = false, features = ["async-std-runtime"]}
serde = "1.0.117"
serde_json = "1.0.59"
tide = {version = "0.14.0", default-features = false, features = ["h1-server"]}
